<resources>
    <string name="app_name">Two Activities</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="label_text_one">Text One</string>
    <string name="label_text_two">Text Two</string>
    <string name="label_text_three">Text Three</string>
    <string name="text_one">Repeat after me. There’s no quick and easy shortcut. As you begin each Verbal section, you will see approximately ten Reading Comprehension passages. One or two of which will be longer than a single paragraph. These long passages can be both overwhelming and time-consuming. So, let’s take a moment to consider the proper approach for tackling multi-paragraph RC sections.

Strategic Approach
First, be sure to read each passage at your normal reading speed. Reading too slowly will prevent you from having adequate time to answer all the questions. If you read too quickly, you can miss a lot of information the passage presents. This will then force you to reread portions of the passage—something that also prevents you from answering every question. Do not skim the paragraphs. Skimming will not effectively prepare you to answer all the questions.

Remember that your primary goal while reading is to find the main point of the passage. Most passages state the main point in the first paragraph, though it’s unlikely to see them in the first or second sentence. The main point of many passages appears in the final sentence of the first paragraph or the first sentence of the second paragraph. On average, about 30% of the questions deal directly with the main idea.</string>
    <string name="text_two">Adapted from "The Colors of Animals" by Sir John Lubbock in A Book of Natural History (1902, ed. David Starr Jordan)

The color of animals is by no means a matter of chance; it depends on many considerations, but in the majority of cases tends to protect the animal from danger by rendering it less conspicuous. Perhaps it may be said that if coloring is mainly protective, there ought to be but few brightly colored animals. There are, however, not a few cases in which vivid colors are themselves protective. The kingfisher itself, though so brightly colored, is by no means easy to see. The blue harmonizes with the water, and the bird as it darts along the stream looks almost like a flash of sunlight.

Desert animals are generally the color of the desert. Thus, for instance, the lion, the antelope, and the wild donkey are all sand-colored. “Indeed,” says Canon Tristram, “in the desert, where neither trees, brushwood, nor even undulation of the surface afford the slightest protection to its foes, a modification of color assimilated to that of the surrounding country is absolutely necessary. Hence, without exception, the upper plumage of every bird, and also the fur of all the smaller mammals and the skin of all the snakes and lizards, is of one uniform sand color.”

The next point is the color of the mature caterpillars, some of which are brown. This probably makes the caterpillar even more conspicuous among the green leaves than would otherwise be the case. Let us see, then, whether the habits of the insect will throw any light upon the riddle. What would you do if you were a big caterpillar? Why, like most other defenseless creatures, you would feed by night, and lie concealed by day. So do these caterpillars. When the morning light comes, they creep down the stem of the food plant, and lie concealed among the thick herbage and dry sticks and leaves, near the ground, and it is obvious that under such circumstances the brown color really becomes a protection. It might indeed be argued that the caterpillars, having become brown, concealed themselves on the ground, and that we were reversing the state of things. But this is not so, because, while we may say as a general rule that large caterpillars feed by night and lie concealed by day, it is by no means always the case that they are brown; some of them still retaining the green color. We may then conclude that the habit of concealing themselves by day came first, and that the brown color is a later adaptation.</string>
    <string name="text_three">“Strange Bedfellows!” lamented the title of a recent letter to Museum News, in which a certain Harriet Sherman excoriated the National Gallery of Art in Washington for its handling of tickets to the much-ballyhooed “Van Gogh’s van Goghs” exhibit. A huge proportion of the 200,000 free tickets were snatched up by the opportunists in the dead of winter, who then scalped those tickets at $85 apiece to less hardy connoiseurs.

Yet, Sherman’s bedfellows are far from strange. Art, despite its religious and magical origins, very soon became a commercial venture. From bourgeois patrons funding art they barely understood in order to share their protegee’s prestige, to museum curators stage-managing the cult of artists in order to enhance the market value of museum holdings, entrepreneurs have found validation and profit in big-name art. Speculators, thieves, and promoters long ago created and fed a market where cultural icons could be traded like commodities.

This trend toward commodification of high-brow art took an ominous, if predictable, turn in the 1980s during the Japanese “bubble economy.” At a time when Japanese share prices more than doubled, individual tycoons and industrial giants alike invested record amounts in some of the West’s greatest masterpieces. Ryoei Saito, for example, purchased van Gogh’s Portrait of Dr. Gachet for a record-breaking $82.5 million. The work, then on loan to the Metropolitan Museum of Modern Art, suddenly vanished from the public domain. Later learning that he owed the Japanese government $24 million in taxes, Saito remarked that he would have the paining cremated with him to spare his heirs the inheritance tax. This statement, which he later dismissed as a joke, alarmed and enraged many. A representative of the Van Gogh museum, conceding that he had no legal redress, made an ethical appeal to Mr. Saito, asserting, “a work of art remains the possession of the world at large.”</string>
    <string name="button_label_toast">Say Hello</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello!</string>
    <string name="label_homework">Homework</string>
    <string name="hello_label">Hello!</string>
</resources>